Mention env_file

--- a/docker/stacks/infra/watchtower/docker-compose.yml
+++ b/docker/stacks/infra/watchtower/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: nickfedor/watchtower:latest
     container_name: watchtower
     restart: unless-stopped
+    env_file:
+      - stack.env
     environment:
       TZ: $WATCHTOWER_TIMEZONE
       WATCHTOWER_CLEANUP: true
